# crewai_modern

./: report.md
my_crew/: README.md  pyproject.toml
my_crew/src/my_crew/: crew.py  main.py
my_crew/src/my_crew/config/: agents.yaml
my_crew_2/: README.md  pyproject.toml
my_crew_2/src/my_crew_2/: crew.py  main.py
my_crew_2/src/my_crew_2/config/: agents.yaml  tasks.yaml
my_crew_3/: README.md  pyproject.toml
my_crew_3/src/my_crew_3/: crew.py  main.py
my_crew_3/src/my_crew_3/config/: agents.yaml  tasks.yaml
