[project]
name = "my_crew_3"
version = "0.1.0"
description = "my_crew_3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
my_crew_3 = "my_crew_3.main:run"
run_crew = "my_crew_3.main:run"
train = "my_crew_3.main:train"
replay = "my_crew_3.main:replay"
test = "my_crew_3.main:test"
run_with_trigger = "my_crew_3.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
